Text wrap on ion select solved, tester id not null

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -39,9 +39,29 @@
 
 }
 
-.alert-wrapper{
+// .alert-wrapper{
 
-  max-width: unset !important;
-  width: 100% !important;
+//   max-width: unset !important;
+//   width: 100% !important;
+
+// }
+
+.alert-radio-label{
+
+  white-space: normal !important;
 
 }
+
+// .alert-tappable.alert-radio{
+
+//   height: auto;
+//   contain: content;
+
+// }
+
+// .alert-radio-label.sc-ion-alert-md,
+// .alert-radio-label.sc-ion-alert-ios {
+
+//   white-space: normal;
+
+// }
